# curl-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel
