module(
    name = "curl",
    version = "8.11.0.bcr.4",
    bazel_compatibility = [">=7.2.1"],
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "mbedtls", version = "3.6.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "boringssl", version = "0.20241024.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.1")

